[gd_scene load_steps=13 format=3 uid="uid://dgww5i06smk8l"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_d5m2f"]
[ext_resource type="PackedScene" uid="uid://vupfism0y8ub" path="res://scenes/main.tscn" id="1_u6hpc"]
[ext_resource type="Theme" uid="uid://htljjiwxx5yv" path="res://assets/themes/menu_primary_theme.tres" id="2_144my"]
[ext_resource type="Theme" uid="uid://8f0qdw2s2k52" path="res://assets/themes/menu_secondary_theme.tres" id="3_dsos3"]
[ext_resource type="Shader" path="res://assets/shaders/particles.gdshader" id="3_kt46j"]
[ext_resource type="Texture2D" uid="uid://b3ng7slf71a04" path="res://assets/textures/Frame 1 (13).png" id="4_gpjoo"]
[ext_resource type="Theme" uid="uid://bxpsvu4i3j1dv" path="res://assets/themes/menu_text_entry_theme.tres" id="4_ikv7p"]
[ext_resource type="Shader" path="res://assets/shaders/transition_1.gdshader" id="5_bayir"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1aieo"]
resource_local_to_scene = true
shader = ExtResource("5_bayir")
shader_parameter/progress = 0.0
shader_parameter/diamondPixelSize = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_45ajv"]
shader = ExtResource("3_kt46j")
shader_parameter/dimensions = Vector2(1152, 648)
shader_parameter/rows = 20.0
shader_parameter/columns = 5.0
shader_parameter/vertical_scroll = 0.06
shader_parameter/horizontal_scroll = 0.05
shader_parameter/size_min = 0.2
shader_parameter/size_max = 0.6
shader_parameter/wave_min = 0.1
shader_parameter/wave_max = 1.0
shader_parameter/wave_speed = 0.1
shader_parameter/wave_rotation = 1.0
shader_parameter/far_color = Color(0.117647, 0.117647, 0.117647, 1)
shader_parameter/near_color = Color(1, 1, 1, 1)
shader_parameter/particle_texture = ExtResource("4_gpjoo")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpumu"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wsm67"]

[node name="Menu" type="Node"]
script = ExtResource("1_d5m2f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Transition" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_1aieo")
use_parent_material = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="Menu1" type="PanelContainer" parent="CanvasLayer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Menu1"]
light_mask = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_45ajv")
layout_mode = 2

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer/Menu1/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -576.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lpumu")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu1/ColorRect/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_144my")
text = " PLAY"
alignment = 0

[node name="LoadoutButton" type="Button" parent="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dsos3")
theme_override_constants/outline_size = 0
text = "  LOADOUT"
alignment = 0

[node name="OptionsButton" type="Button" parent="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dsos3")
text = "  OPTIONS"
alignment = 0

[node name="QuitButton" type="Button" parent="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dsos3")
theme_override_constants/outline_size = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_wsm67")
text = "  QUIT"
alignment = 0

[node name="Menu2" type="PanelContainer" parent="CanvasLayer"]
visible = false
modulate = Color(0.0745098, 0.560784, 1, 1)
self_modulate = Color(1, 1, 1, 0)
clip_children = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Menu2"]
light_mask = 2
visibility_layer = 2
z_index = -1
layout_mode = 2

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer/Menu2/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -576.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lpumu")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu2/ColorRect/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="FindMatchButton" type="Button" parent="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_144my")
text = " FIND MATCH"
alignment = 0

[node name="HostButton" type="Button" parent="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dsos3")
theme_override_constants/outline_size = 0
text = "  HOST"
alignment = 0

[node name="JoinButton" type="Button" parent="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dsos3")
text = "  JOIN"
alignment = 0

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ikv7p")
placeholder_text = " Enter address port"

[node name="Node" type="Node" parent="CanvasLayer/Menu2"]

[node name="main" parent="." instance=ExtResource("1_u6hpc")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer/LoadoutButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu1/ColorRect/MainMenu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer/VBoxContainer/FindMatchButton" to="." method="_on_find_match_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu2/ColorRect/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
